# dpe-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
database-builder/: db.py  (+17 more)
simple-agentic-framework/: README.md  TODO.md  library-learnings.md  proposal.md  pyproject.toml  script_context_info.md  script_context_simplification.md  ty.toml
simple-agentic-framework/frontend/: package-lock.json  package.json  tsconfig.json
simple-agentic-framework/frontend/src/: app.ts
simple-agentic-framework/marimo/: transactions_for_day_machine.py
simple-agentic-framework/proofs/: prove_alert_suppression_for_machine_type.py  prove_restock_alert_2025_02_23.py  prove_script_context_and_response_notebook.py  prove_scripts_and_backtesting.py
simple-agentic-framework/proofs/logs/bundles_2025_02_27/: bundle_2025-02-27_loc1_machine1.json  bundle_2025-02-27_loc1_machine2.json  bundle_2025-02-27_loc2_machine3.json  bundle_2025-02-27_loc2_machine4.json  manifest_2025-02-27.json  manifest_2025-02-27_loc1_machine2.json
simple-agentic-framework/src/simple_agent_framework/: __init__.py  __main__.py  alert_payload.py  api.py  db.py  demo_data.py  engine.py  llm_review.py  llm_script_edit.py  llm_script_final_check.py  models.py  script_context.py  script_prompt.py  script_registry.py  script_runner.py  time_utils.py  types.py
simple-agentic-framework/src/simple_agent_framework/scripts/: __init__.py  machine_dropoff_monitor.py  payment_outage_hint.py  pricing_anomaly.py  pricing_sanity_check.py  restock_predictor.py  service_due_predictor.py  slow_mover_cleanup.py  (+1 more)
(+376 files in other folders)
